fix: change wrong z-index in pets block

--- a/online-zoo/pages/main/style.css
+++ b/online-zoo/pages/main/style.css
@@ -1239,7 +1239,7 @@ input[type=email]:invalid:focus + .email-form-button .button__submit {
   .header {
     position: sticky;
     top: 0;
-    z-index: 100;
+    z-index: 101;
   }
   .header .logo {
     width: 46.86px;
@@ -1638,7 +1638,7 @@ input[type=email]:invalid:focus + .email-form-button .button__submit {
   .header {
     position: sticky;
     top: 0;
-    z-index: 100;
+    z-index: 101;
   }
   .header .logo {
     width: 46.86px;
