--- a/online-zoo/pages/sass/layout/_layout-320px.scss
+++ b/online-zoo/pages/sass/layout/_layout-320px.scss
@@ -5,7 +5,7 @@
   .header {
     position: sticky;
     top:0;
-    z-index: 100;
+    z-index: 101;
     .logo {
       width: 46.86px;
       height: 29.03px;
